--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
-  /* background-color:  */
+  background-image: url('./assets/Animated\ Shape (1).svg');
+  color: white;
+  background-size: cover;
+  /* min-height: 100%; */
+}
+html, body, #root, .App {
+  height: 100%;
 }
 
 .App-logo {
@@ -36,4 +42,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.weatherIcon {
+  position: relative;
+  animation: mymove 2s infinite;
+}
+
+@keyframes mymove {
+  0% {bottom: 0px; filter: brightness(100%);} 
+  50% {bottom: 8px; filter: brightness(90%);}
+ 100% {bottom: 0px; filter: brightness(100%);}
 }
